2006-06-27  Bruno Haible  <bruno@clisp.org>

	* PACKAGING: Don't mention isc-posix.m4.

2006-06-27  Bruno Haible  <bruno@clisp.org>

	Assume vprintf function.
	* os2/configure.awk: Remove unused HAVE_VPRINTF substitution.

2006-04-14  Bruno Haible  <bruno@clisp.org>

	* autogen.sh: Require autoconf-2.60.

2006-03-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER) [ linux ]: Avoid warning when
	"parsing" /etc/ld.so.conf and empty /etc/ld.so.conf.d.

2006-06-04  Bruno Haible  <bruno@clisp.org>

	* PACKAGING: Mention inttypes-h.m4.

2006-05-14  Bruno Haible  <bruno@clisp.org>,
            Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* m4/libtool.m4 [ linux ] (AC_LIBTOOL_LANG_CXX_CONFIG)
	(AC_LIBTOOL_POSTDEP_PREDEP, AC_LIBTOOL_PROG_COMPILER_PIC)
	(AC_LIBTOOL_PROG_LD_SHLIBS): Add support for Sun C 5.9,
	Sun C++ 5.9, and Sun Fortran 8.3 on Linux.

2006-05-06  Charles Wilson  <cygwin@cwilson.fastmail.fm>

	* m4/libtool.m4: On Cygwin, like on mingw, define DLL_EXPORT when
	compiling a shared library object.

2006-04-26  Bruno Haible  <bruno@clisp.org>

	* build-aux/config.guess, build-aux/config.sub: Update to GNU version
	2006-04-26.

2006-04-17  Bruno Haible  <bruno@clisp.org>

	* PACKAGING: Remove mkinstalldirs file.

2006-04-20  Bruno Haible  <bruno@clisp.org>

	* autogen.sh: Also regenerate examples PO files.
	Reported by Charles Wilson <cygwin@cwilson.fastmail.fm>.

2006-03-28  Bruno Haible  <bruno@clisp.org>

	* PACKAGING: Mention bin/recode* programs.

2005-12-29  Bruno Haible  <bruno@clisp.org>

	* build-aux/install-reloc: If hard linking is not possible, use a
	simple copy. Needed on Woe32 filesystems.

2005-12-19  Bruno Haible  <bruno@clisp.org>

	* build-aux/ltmain.sh: Upgrade to libtool-1.5.22.
	2001-11-03  Bruno Haible  <bruno@clisp.org>
		* build-aux/ltmain.sh: chmod 777 the .libs directory, so that
		"make install" succeeds.
	* m4/libtool.m4: Upgrade to libtool-1.5.22.
	2004-02-22  Bruno Haible  <bruno@clisp.org>